# AI-LM-Creator

./: app.py  lecture_content_creator.py  lecture_material_creator.py  prompts.yaml  pyproject.toml  requirements.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/: lecture_material_creator.py  main.py
qdrant_storage/collections/lectureVectorDb/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/lectureVectorDb/0/segments/07aafee1-326d-4d83-9c74-1ee748ecab5b/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/lectureVectorDb/0/segments/22ef0074-65d2-4d39-8689-4adc0ba381c9/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/lectureVectorDb/0/segments/5924ed5f-1ad6-42ae-85c6-eb263a6b342e/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/lectureVectorDb/0/segments/73726c88-6288-47fc-8e52-3ca6079dc2ab/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/lectureVectorDb/0/segments/767d772e-56b6-4d57-9b9d-27f8bafa9f7d/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/lectureVectorDb/0/segments/85d708a6-2bcb-4001-9ccb-901990b31204/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/lectureVectorDb/0/segments/98e5b3f3-4cc6-4ba1-9bd1-69bf81e5e13c/: 000009.sst  IDENTITY  (+6 more)
tests/: test_lecture_content_creator.py
(+31 files in other folders)
